# todo-actix-web-ddd-clean-architecture

./: Cargo.toml
src/: main.rs
todo-domain/: Cargo.toml
todo-driver/: Cargo.toml
todo-gateway/: Cargo.toml
todo-port/: Cargo.toml
todo-rest/: Cargo.toml
todo-rest/src/: main.rs
