[package]
name = "todo-actix-web-ddd-clean-architecture"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web="4"

[workspace]
members = [
    "todo-usecase",
    "todo-port",
    "todo-domain",
    "todo-gateway",
    "todo-driver",
    "todo-rest"
]