[package]
name = "todo-actix-web-ddd-clean-architecture"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "todo-usecase",
    "todo-port",
    "todo-domain",
    "todo-gateway",
    "todo-driver",
    "todo-rest"
]
[workspace.dependencies]
actix-web="4"

[dependencies]
actix-web={workspace = true}
